--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 </td>
     <td class="tg-baqh"><img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/CLR.jpg" width="175" height="175"></td>
   </tr>
-							<td class="tg-baqh">Additional thanks to students Rebekkah Castellanos, Karen Grewar, Gabriela Noriega, and Seung Won Ha. Thanks to Karen Howell and Rachelle Smith in Leavey Library. Extra special thanks to Curtis Fletcher and the Polymathic Lab for providing the space and food for the event. Big thanks to our friends at UCLA - Yoh Kawano, Zoe Borovsky, Albert Kochaphum, Dawn Childress, Anthony Caldwell, and James Walker. Lastly, big thank you to the Open Street Map Community and Missing Maps! And, of course, you!
+							<td class="tg-baqh">Additional thanks to students Rebekkah Castellanos, Karen Grewar, Gabriela Noriega, and Seung Won Ha. Thank you to the Spatial Sciences Institute. Thanks to Karen Howell and Rachelle Smith in Leavey Library. Extra special thanks to Curtis Fletcher and the Polymathic Lab for providing the space and food for the event. Big thanks to our friends at UCLA - Yoh Kawano, Zoe Borovsky, Albert Kochaphum, Dawn Childress, Anthony Caldwell, and James Walker. Lastly, big thank you to the Open Street Map Community and Missing Maps! And, of course, you!
 </td>
     <td class="tg-baqh"><img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/MM.jpg" width="300" height="250"></td>
   </tr>
