--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 							</ul>
 							<h1>USC Map-a-thon</h1>				
 							<img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/Mapathon%20Flyer.jpg" width="450" height="350">
-							<p>Join us November 15th from 10am to 1:30pm at at the Ahmanson Lab on the 3rd Floor of Leavey Library for a special humanitarian map-a-thon event. We will join forces (and compete!) with UCLA as we learn more about Open Street Map, Missing Maps, and work on a project that needs urgent mapping.</P> 
-					<p><b>When: Wednesday November 15th, 2017</b><br>
+							<p>Join us November 14th from 10am to 2:00 pm at at the Ahmanson Lab on the 3rd Floor of Leavey Library for a special humanitarian map-a-thon event. We will join forces (and compete!) with UCLA as we learn more about Open Street Map, Missing Maps, and work on a project that needs urgent mapping.</P> 
+					<p><b>When: Wednesday November 14th, 2017</b><br>
 				        <b>Where: Polymathic Innovation Lab, 3rd Floor of Leavey Library</b><br>
 						<b>Remote Participants: <a href="https://ucla.zoom.us/j/705475990">Join us via Zoom!</a></b> Online room will be open starting at 9:30am.</p>	
 				        <b>Food will be provided!</><br>
@@ -59,11 +59,28 @@
 						<ul style="list-style-type:disc">
 							<li><strong>Schedule</strong></li>
   <li>9:30-10:00 - Coffee/Donuts and registration.</li>
-<li>10:00-10:15 - Intro, say hello to UCLA, and basic tutorial.</li>
-  <li>10:15-12:00 - Mapping!</li>
-  <li>12:00-1:25 - Pizza and mapping!</li>
-  <li>1:25-1:30 - Check-in with UCLA and announce the winner and thank yous.</li>
+<li>10:00-10:05 - Opening Remarks with UCLA</li>
+  <li>10:05-11:05 - Lightening Talks - Speakers from USC and UCLA will get us started thinking about maps and GIS</li>
+  <li>11:05-11:10 - Missing Maps and OSM KICK OFF with UCLA's James Walker</li>
+  <li>11:10-11:20 - HOTOSM Training and choose tasks that will be mapped</li>
+<li>11:30 - Mapathon begins! Live camera view into UCLA’s mapathoners and a shared Leaderboard to track mapping results.</li>
 </ul>
+							
+							
+Announce mapathon hashtags:
+#uclagisday2018
+#uscgisday2018
+Reveal leaderboard
+
+11:30
+Mapathon begins
+Live camera view into USC’s mapathoners
+
+12:00
+Lunch arrives
+13:45-14:00
+Leaderboard announcement
+
 						</div>
 						<div class="image">
 							<img src="images/puertoricoOSM.jpg" alt="" />
