--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 								<li><a href="#Toolkit" class="button small">Toolkit</a></li>
 							<li><a href="https://www.eventbrite.com/e/usc-gis-day-and-mapathon-tickets-51886716566" class="button small">RSVP!</a></li>
 							</ul>
-							<h1>USC GIS Day and Map-a-thon</h1>				
+							<h1>USC GIS Day </h1>
+							<h1>and Map-a-thon</h1>				
 							<img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/mapathon1.jpg" width="450" height="350">
 							<p>Join us November 14th from 10am to 2:00 pm at at the Ahmanson Lab on the 3rd Floor of Leavey Library for a special humanitarian map-a-thon event. We will join forces (and compete!) with UCLA as we learn more about Open Street Map, Missing Maps, and work on a project that needs urgent mapping.</P> 
 					<p><b>When: Wednesday November 14th, 2018</b><br>
