--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
 							<h1>USC GIS Day </h1>
 							<h1>and Map-a-thon</h1>				
 							<img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/mapathon1.jpg" width="450" height="350">
-							<p>Join us November 14th from 10am to 2:00 pm at at the Ahmanson Lab on the 3rd Floor of Leavey Library for a special humanitarian map-a-thon event. We will join forces (and compete!) with UCLA as we learn more about Open Street Map, Missing Maps, and work on a project that needs urgent mapping.</P> 
+							<p>Do you want to do more to immediately help people affected by recent natural disasters? Does the word “Bruin” ruin your day? Then join us with UCLA on November 14th for a special humanitarian map-a-thon and speaker event.</p>
+
+<p>We will join forces (and compete!) with UCLA on GIS day. First, fellow students at USC and UCLA will share their GIS and mapping experiences through short lightning talks. Then we will have a friendly mapathon competition with UCLA.</p>
+
+<p>Learn more about Open Street Map, Missing Maps, and how you can be part of the humanitarian mapping community!</P> 
+
 					<p><b>When: Wednesday November 14th, 2018</b><br>
 				        <b>Where: Ahmanson Lab, 3rd Floor of Leavey Library</b><br>
 				        <b>Food will be provided!</><br>
