--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 								<li><a href="#who" class="button small">Who</a></li>
 		
 								<li><a href="#Toolkit" class="button small">Toolkit</a></li>
+					
 							<li><a href="https://www.eventbrite.com/e/usc-gis-day-and-mapathon-tickets-51886716566" class="button small">RSVP!</a></li>
 							</ul>
 							<h1>USC GIS Day </h1>
@@ -81,8 +82,12 @@
 				<!-- Three -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Photos from previous Map-a-thons</h2>
+							<h2>Previous Map-a-thons</h2>
 							<p>A selection of photos from previous Map-a-thons</p>
+							<p>Previous Map-a-thons include: 
+								October 10th, 2017  at VKC Library
+								November 15th, 2017 at Ahamson Lab in Leavey Library</p>
+
 						</div>.
 
 						<!-- Gallery -->
