--- a/index.html
+++ b/index.html
@@ -83,10 +83,14 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Previous Map-a-thons</h2>
-							<p>A selection of photos from previous Map-a-thons</p>
-							<p>Previous Map-a-thons include: 
-								October 10th, 2017  at VKC Library
-								November 15th, 2017 at Ahamson Lab in Leavey Library</p>
+							<ul style="list-style-type:circle">
+  <li>October 10th, 2017  at VKC Library</li>
+  <li>November 15th, 2017 at Ahamson Lab in Leavey Library</li>
+</ul> 
+							<p>Selection of photos from previous Map-a-thons</p>
+							 
+							
+								</p>
 
 						</div>.
 
