--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <td class="tg-baqh">Speaker 2</td>
     <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/AR.JPG" width="250" height="200"></td>
   </tr>	
+						</table>
   <li>11:05-11:10 - Missing Maps and OSM KICK OFF with UCLA's James Walker</li>
   <li>11:10-11:20 - HOTOSM Training and choose tasks that will be mapped</li>
 <li>11:30 - Mapathon begins! Live camera view into UCLA’s mapathoners and a shared Leaderboard to track mapping results.</li>
