--- a/index.html
+++ b/index.html
@@ -50,33 +50,34 @@
 <li>11:30 - Mapathon begins! Live camera view into UCLA’s mapathoners and a shared Leaderboard to track mapping results.</li>
 </ul>
 					</div>
-				<p>More about our speakers</p>
-				<table class="tg" style="undefined;table-layout: fixed; width: 600px">
+				<p>More about our spatial thinkers</p>
+				<table class="tg" style="undefined;table-layout: fixed; width: 500px">
 <colgroup>
 <col style="width: 395px">
 <col style="width: 336px">
 </colgroup>
   <tr>
-    <td class="tg-baqh">speaker1</td>
-    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/AR.JPG" width="250" height="200"></td>
+    <td class="tg-baqh">Francesca Albrezzi (UCLA) on sharing exhibition spaces through immersive technologies</td>
+    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/2018GISspeaker1.png" width="250" height="200"></td>
   </tr>	
 						 <tr>
-    <td class="tg-baqh">Speaker 2</td>
-    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/AR.JPG" width="250" height="200"></td>
+    <td class="tg-baqh">Kevin Barrow (USC) on neighborhood data for social change.</td>
+    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/puertoricoOSM" width="250" height="200"></td>
   </tr>	
-					<td class="tg-baqh">speaker3</td>
-    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/AR.JPG" width="250" height="200"></td>
-  </tr>	
-						 <tr>
-    <td class="tg-baqh">Speaker 4</td>
-    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/AR.JPG" width="250" height="200"></td>
-  </tr>	
-				  <td class="tg-baqh">speaker5</td>
-    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/AR.JPG" width="250" height="200"></td>
+					<td class="tg-baqh">Henry and Hunter (UCLA) on geographers meeting the library.</td>
+    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/puertoricoOSM.JPG" width="250" height="200"></td>
   </tr>	
 						 <tr>
-    <td class="tg-baqh">Speaker 6</td>
-    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/AR.JPG" width="250" height="200"></td>
+    <td class="tg-baqh">Kurt Daum (USC) on connecting with Skid Row</td>
+    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/puertoricoOSM" width="250" height="200"></td>
+  </tr>	
+				  <td class="tg-baqh">Maddie Yakal (UCLA) on rice, terraces, and drones</td>
+    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/2018GISspeaker2" width="250" height="200"></td>
+  </tr>	
+						 <tr>
+    <td class="tg-baqh">Matt Bui (USC) on critical cartography</td>
+    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/puertorico
+OSM" width="250" height="200"></td>
   </tr>	
 		
 						</table>
