--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 				<p>More about our spatial thinkers</p>
 				<table class="tg" style="undefined;table-layout: fixed; width: 500px">
 <colgroup>
-<col style="width: 395px">
-<col style="width: 336px">
+<col style="width: 350px">
+<col style="width: 300px">
 </colgroup>
   <tr>
     <td class="tg-baqh">Francesca Albrezzi (UCLA) on sharing exhibition spaces through immersive technologies</td>
@@ -62,14 +62,14 @@
   </tr>	
 						 <tr>
     <td class="tg-baqh">Kevin Barrow (USC) on neighborhood data for social change.</td>
-    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/puertoricoOSM" width="250" height="200"></td>
+    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/puertoricoOSM.jpg" width="250" height="200"></td>
   </tr>	
 					<td class="tg-baqh">Henry and Hunter (UCLA) on geographers meeting the library.</td>
-    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/puertoricoOSM.JPG" width="250" height="200"></td>
+    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/puertoricoOSM.jpg" width="250" height="200"></td>
   </tr>	
 						 <tr>
     <td class="tg-baqh">Kurt Daum (USC) on connecting with Skid Row</td>
-    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/puertoricoOSM" width="250" height="200"></td>
+    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/puertoricoOSM.jpg" width="250" height="200"></td>
   </tr>	
 				  <td class="tg-baqh">Maddie Yakal (UCLA) on rice, terraces, and drones</td>
     <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/2018GISspeaker2" width="250" height="200"></td>
@@ -77,7 +77,7 @@
 						 <tr>
     <td class="tg-baqh">Matt Bui (USC) on critical cartography</td>
     <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/puertorico
-OSM" width="250" height="200"></td>
+OSM.jpg" width="250" height="200"></td>
   </tr>	
 		
 						</table>
