--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/puertoricoOSM.jpg" width="250" height="200"></td>
   </tr>	
 				  <td class="tg-baqh">Maddie Yakal (UCLA) on rice, terraces, and drones</td>
-    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/2018GISspeaker2" width="250" height="200"></td>
+    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/2018GISspeaker2.png" width="250" height="200"></td>
   </tr>	
 						 <tr>
     <td class="tg-baqh">Matt Bui (USC) on critical cartography</td>
@@ -94,12 +94,10 @@ OSM.jpg" width="250" height="200"></td>
 							<h2>Map-a-thon Toolkit</h2>
 							<h3>What to do before the Map-a-thon</h3>
 							<li>Get an <a href="https://www.openstreetmap.org/user/new">OSM account</a></li>
-							<li><a href="http://slides.com/arutkows/battleofthemaps#/">This is the slideshow</a> we will be using the day of the Ma-a-thon. If you can please go through it before you come!</li>
-							<li><a href="http://tasks.hotosm.org/learn">Watch some more videos</a> on how to use the task manager in Open Street Map.</li>
+							<li><a href="http://slides.com/arutkows/battleofthemaps#/">Online Tutorial. </a> If you have time take a look and go through these slides before the map-a-thon!</li>
+							<li><a href="http://tasks.hotosm.org/learn">Videos</a> on how to use the task manager in Open Street Map.</li>
 							<p> </p>
 						<h3>What to expect once the Map-a-thon begins?</h3>
-						<p>If you are off-site please log-in to the <a href="https://ucla.zoom.us/j/705475990">Battle of Maps virtual room.</a></p> 
-							<p>For those participating virtually please go through the slideshow beforehand! It will be difficult to provide hands on help but we will definitely try!</p>
 						<p>We will be picking projects from the HOTOSM website. We will be giving brief tutorials/workshops to get people up to speed and we will have volunteers on hand to get you started and answer questions. As we map we will have a leaderboard showing our progress against UCLA. In addition we will have a live feed so we can say hello and see how are counterparts are doing.</p>
 						
 						</div>
