--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@ OSM.jpg" width="250" height="200"></td>
 							<h2>Map-a-thon Toolkit</h2>
 							<h3>What to do before the Map-a-thon</h3>
 							<li>Get an <a href="https://www.openstreetmap.org/user/new">OSM account</a></li>
-							<li><a href="http://slides.com/arutkows/battleofthemaps#/">Online Tutorial. </a> If you have time take a look and go through these slides before the map-a-thon!</li>
-							<li><a href="http://tasks.hotosm.org/learn">Videos</a> on how to use the task manager in Open Street Map.</li>
+							<li><a href="http://slides.com/arutkows/battleofthemaps#/">Online Tutorial made specifically for the map-a-thon.</a></li>
+							<li><a href="http://tasks.hotosm.org/learn">OSM Videos</a> on how to use the task manager.</li>
 							<p> </p>
 						<h3>What to expect once the Map-a-thon begins?</h3>
 						<p>We will be picking projects from the HOTOSM website. We will be giving brief tutorials/workshops to get people up to speed and we will have volunteers on hand to get you started and answer questions. As we map we will have a leaderboard showing our progress against UCLA. In addition we will have a live feed so we can say hello and see how are counterparts are doing.</p>
