--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </tr>	
 						 <tr>
     <td class="tg-baqh">Kurt Daum (USC) on connecting with Skid Row</td>
-    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/2018GISspeaker3" width="250" height="200"></td>
+    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/2018GISspeaker3.jpg" width="250" height="200"></td>
   </tr>	
 				  <td class="tg-baqh">Maddie Yakal (UCLA) on rice, terraces, and drones</td>
     <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/2018GISspeaker2.png" width="250" height="350"></td>
