--- a/index.html
+++ b/index.html
@@ -215,9 +215,12 @@
   </tr>
 	<tr>										<td class="tg-baqh">Abriannah Aiken is a 2nd year Architecture student minoring in Archaeology. She enjoys encouraging others to understand the complexities and injustices in the world and use privilege to create global impacts!</td>
     <td class="tg-baqh"><img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/AA.jpg" width="190" height="225"></td>
-	<tr>
+	</tr>
+																	 <tr>										<td class="tg-baqh">Mia Poyner is studying Health and Human Sciences with a focus in International Health. During her sophomore year, she took a class called Community Health Scan, where she and her classmates went into downtown Los Angeles and mapped out the various resources available to the homeless people living in Skid Row. This experience sparked her desire to examine the relationship between health and spatial patterns. 
+</td>
+    <td class="tg-baqh"><img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/MP1.png" width="190" height="225"></td>
+	</tr>
     <td class="tg-baqh">Past Organizers</td>
-  </tr>
   <tr>
     <td class="tg-baqh">Natalie Millstein is a senior Geodesign major with a minor in architecture. She enjoys investigating and evaluating ongoing change in the demographics and structures of urban environments. </td>
     <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/NM.jpg" width="200" height="225"></td>
