--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/2018GISspeaker4.jpg" width="250" height="200"></td>
   </tr>	
 					<td class="tg-baqh">Henry and Hunter (UCLA) on geographers meeting the library.</td>
-    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/puertoricoOSM.jpg" width="250" height="200"></td>
+    <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/HHHD.png" width="250" height="200"></td>
   </tr>	
 						 <tr>
     <td class="tg-baqh">Kurt Daum (USC) on connecting with Skid Row</td>
@@ -81,7 +81,7 @@
     <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/2018GISspeaker2.png" width="250" height="350"></td>
   </tr>	
 						 <tr>
-    <td class="tg-baqh">Matt Bui (USC) on critical cartography</td>
+    <td class="tg-baqh">Matt Bui (USC) on rethinking environmental racism</td>
     <td class="tg-baqh"><img src="https://github.com/USCMapathon/mapathon/raw/gh-pages/images/2018GISspeaker5.jpg" width="250" height="200"></td>
   </tr>	
 	</table>
