--- a/index.html
+++ b/index.html
@@ -99,9 +99,13 @@
 <li>Get an <a href="https://www.openstreetmap.org/user/new">OSM account</a></li>
 <li><a href="http://slides.com/arutkows/battleofthemaps#/">Online Tutorial made specifically for the map-a-thon.</a></li>
 <li><a href="http://tasks.hotosm.org/learn">OSM Videos</a> on how to use the task manager.</li>
-						
-		<h3>What to expect once the Map-a-thon begins?</h3>
-	<p>We will be picking projects from the HOTOSM website. We will be giving brief tutorials/workshops to get people up to speed and we will have volunteers on hand to get you started and answer questions. As we map we will have a leaderboard showing our progress against UCLA. In addition we will have a live feed so we can say hello and see how are counterparts are doing.</p>
+<li><a href="http://www.missingmaps.org/leaderboards/#/uclagisday2018,uscgisday2018">The Leaderboard</a> tracks how many buildings each campus has added throughout the mapathon.</li>
+		
+		
+			<br>			
+		<h3>What to expect once the Map-a-thon begins</h3>
+
+	<p>We will be giving brief tutorials/workshops to get people up to speed and we will have volunteers on hand to get you started and answer questions. As we map we will have a leaderboard showing our progress against UCLA. In addition we will have a live feed so we can say hello and see how are counterparts are doing.</p>
 						
 	</div>
 <div class="image">
