--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 							
 	<h1>and Map-a-thon</h1>				
 		<img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/mapathon1.jpg" width="450" height="350">
-							
+
+	<h3>UPDATE</h3>
+	<p> USC and UCLA collectively mapped just under 10,000 buildings! Congratulations to both sides! USC edged UCLA by 126 buildings mapped. An amazing effort all around and a huge thank you to everyone who came out and mapped with us yesterday.</p>
+	
+	<img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/2018mapathonresults.png" width="450" height="350">
+		
 	<p>Do you want to do more to immediately help people affected by recent natural disasters? Does the word “Bruin” ruin your day? Then join us with UCLA on November 14th for a special humanitarian map-a-thon and speaker event.</p>
 
 	<p>We will join forces (and compete!) with UCLA on GIS day. First, fellow students at USC and UCLA will share their GIS and mapping experiences through short lightning talks. Then we will have a friendly mapathon competition with UCLA.</p>
