--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
 		<img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/mapathon1.jpg" width="450" height="350">
 
 	<h3>UPDATE</h3>
-	<p> USC and UCLA collectively mapped just under 10,000 buildings! Congratulations to both sides! USC edged UCLA by 126 buildings mapped. An amazing effort all around and a huge thank you to everyone who came out and mapped with us yesterday.</p>
-	
-	<img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/2018mapathonresults.png" width="450" height="350">
 		
 	<p>Do you want to do more to immediately help people affected by recent natural disasters? Does the word “Bruin” ruin your day? Then join us with UCLA on November 14th for a special humanitarian map-a-thon and speaker event.</p>
 
@@ -125,6 +122,10 @@
 	<h2>Previous Map-a-thons</h2>
 <ul style="list-style-type:disc; style="text-align:center; list-style-position:inside;">
 	<li>October 14th, 2018 at Leavey Library</>
+										       <p> USC and UCLA collectively mapped just under 10,000 buildings! Congratulations to both sides! USC edged UCLA by 126 buildings mapped. An amazing effort all around and a huge thank you to everyone who came out and mapped with us yesterday.</p>
+	
+	<img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/2018mapathonresults.png" width="450" height="350">
+																	  <p> Speakers and Topics from 2018 </p>
 										       <table class="tg" style="undefined;table-layout: fixed; width: 500px">
 <colgroup>
 <col style="width: 350px">
@@ -154,9 +155,7 @@
   </tr>	
 	</table>
 		</div>
-<div class="image">
-<img src="images/puertoricoOSM.jpg"/>
-</div>
+
         <li>October 10th, 2017  at VKC Library</li>
   	<li>November 15th, 2017 at Ahamson Lab in Leavey Library</li>
 
