--- a/index.html
+++ b/index.html
@@ -28,15 +28,14 @@
 		<li><a href="http://bit.ly/uscmaps2019" class="button small">RSVP!</a></li>
 	</ul>
 							
-	<h1>2019 USC GIS Day </h1>
+	<h1>2019 USC GIS Day and Map-a-thon</h1>
 			<p> Do you care about climate change? Do you want to make a difference?
 
 Do you want to help people affected by recent natural disasters, environmental impacts, and other humanitarian issues? What about the chance to show a little Bruin Pride and exercise your global citizenship? Come to our humanitarian mapa-thon event – No GIS skills are required – and we will quickly train you to use Open Street Map to assist in humanitarian projects around the world.
 
 Last year’s event was one of the largest on Earth – we made over 10,000 edits to humanitarian projects in just three hours – but we can do better!
 
-The focus this year is on how climate change is impacting our lived environment. Join us to learn more about how you can make a difference through mapping!</p>				
-	<h1>and Map-a-thon</h1>				
+The focus this year is on how climate change is impacting our lived environment. Join us to learn more about how you can make a difference through mapping!</p>								
 		<img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/mapathon1.jpg" width="450" height="350">
 					
 	<p><b>When: Wednesday November 13th, 2019</b><br>	
