--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<h1>2019 USC GIS Day and Map-a-thon</h1>
 			<p> Do you care about climate change? Do you want to make a difference?
 
-Do you want to help people affected by recent natural disasters, environmental impacts, and other humanitarian issues? What about the chance to show a little Bruin Pride and exercise your global citizenship? Come to our humanitarian mapa-thon event – No GIS skills are required – and we will quickly train you to use Open Street Map to assist in humanitarian projects around the world.
+Do you want to help people affected by recent natural disasters, environmental impacts, and other humanitarian issues?Come to our humanitarian mapa-thon event – No GIS skills are required – and we will quickly train you to use Open Street Map to assist in humanitarian projects around the world.
 
 Last year’s event was one of the largest on Earth – we made over 10,000 edits to humanitarian projects in just three hours – but we can do better!
 
