--- a/index.html
+++ b/index.html
@@ -61,31 +61,31 @@ The focus this year is on how climate change is impacting our lived environment.
 <col style="width: 300px">
 </colgroup>
   <tr>
-    <td class="tg-baqh">Anusha Goyal: A Missing Piece of the Puzzle</td>
+    <td class="tg-baqh">Anusha Goyal: A Missing Piece of the Puzzle (UCLA)</td>
     <td class="tg-baqh"><img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/goyal.jpg" width="250" height="300"></td>
   </tr>	
-	<td class="tg-baqh">Kate Vavra-Musser (USC) on Exposure Pathways
+	<td class="tg-baqh">Kate Vavra-Musser on Exposure Pathways (USC)
 </td>
     <td class="tg-baqh"><img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/vavra-musser.jpg" width="250" height="300"></td>
   </tr>	
 						
-					<td class="tg-baqh">Robert Cudd: The World as Will and Representation</td>
+					<td class="tg-baqh">Robert Cudd: The World as Will and Representation (UCLA)</td>
     <td class="tg-baqh"><img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/cudd.jpg" width="250" height="300"></td>
   </tr>	
 	
 	 <tr>
-    <td class="tg-baqh">Young-Kyung Kim on Shifting Resolutions
+    <td class="tg-baqh">Young-Kyung Kim on Shifting Resolutions (USC)
 </td>
     <td class="tg-baqh"><img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/young-kyung.jpg" width="250" height="300"></td>
   </tr>	
 				  
 						 <tr>
-    <td class="tg-baqh">Seher Randhawa on Locating Impacts
+    <td class="tg-baqh">Seher Randhawa on Locating Impacts (USC)
 </td>
     <td class="tg-baqh"><img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/seher.jpg" width="250" height="200"></td>
   </tr>	
 							 <tr>
-    <td class="tg-baqh">Mariah Tso: Critical Perspectives on mapmaking and the power of disruptive relationality</td>
+    <td class="tg-baqh">Mariah Tso: Critical Perspectives on mapmaking and the power of disruptive relationality (UCLA)</td>
     <td class="tg-baqh"><img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/tso.jpg" width="250" height="200"></td>
   </tr>	
 	</table>
