--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@ The focus this year is on how climate change is impacting our lived environment.
   </tr>	
 				  
 						 <tr>
-    <td class="tg-baqh">Seher Randhawa on Locating Impacts (USC)
+    <td class="tg-baqh">Seher Randhawa on Locating Impacts (USC) 
+(left in photo)
 </td>
     <td class="tg-baqh"><img src="https://raw.githubusercontent.com/USCMapathon/mapathon/gh-pages/images/seher.jpg" width="250" height="200"></td>
   </tr>	
