--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ The focus this year is on how climate change is impacting our lived environment.
 <li>Get an <a href="https://www.openstreetmap.org/user/new">OSM account</a></li>
 <li><a href="http://slides.com/arutkows/battleofthemaps#/">Online Tutorial made specifically for the map-a-thon.</a></li>
 <li><a href="http://tasks.hotosm.org/learn">OSM Videos</a> on how to use the task manager.</li>
-<li><a href="http://www.missingmaps.org/leaderboards/#/uclagisday2018,uscgisday2018">The Leaderboard</a> tracks how many buildings each campus has added throughout the mapathon.</li>
+<li><a href="http://www.missingmaps.org/leaderboards/#/uscgisday2019,uclagisday2019">The Leaderboard</a> tracks how many buildings each campus has added throughout the mapathon.</li>
 		
 		
 			<br>			
